0.75 2021-08-08
- fix t/attribPDL.t to work on longdouble - thanks @eserte for report

0.74 2021-08-01
- applied various Debian patches - thanks @sebastic

0.73 2015-06-08
- Fix indexing problem with PDL-IO-HDF5 0.72

0.72 2015-06-08
- Fix indexing problem with PDL-IO-HDF5 0.70

0.71 2015-06-08
- Fix indexing problem with PDL-IO-HDF5 0.70

0.70 2015-06-08
- This release features improved online POD via http://metacpan.org
  and http://search.cpan.org
- improved library detection
- new support for datasets with native endianness.

0.6501 2014-01-26
- Fix missing version info in provides META key (apparently
  having VERSION_FROM => 'hdf5.pd' doesn't fill in the blanks
  for the meta data.

0.65 2014-01-26
- Fix missing META data information to index PDL::IO::HDF5
  since it is provided by hdf5.pd which is not recognized
  by CPAN indexers.

0.64 2014-01-26
- This is an update release to PDL::IO::HDF5 with
  improved platform detection and build process.
- New features and tests (thanks to Andrew Benson)
- Unlinking of datasets
- Extensible datasets
- Creation of scalar references
- Automatic dereferencing of scalar references
- Support for longlong integer attributes and datasets
- Better HDF5 library detection on cygwin
- Added longlong tests
- Other cleanup and fixs