@@ -1,3 +1,4 @@
+Changes
 COPYRIGHT
 hdf5.pd
 HDF5/Dataset.pm
@@ -7,11 +8,11 @@ Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
 README
-Changes
 t/attribPDL.t
 t/file.t
 t/group.t
 t/reference.t
+t/sbyte.hdf5
 t/total.t
 t/unlink.t
 t/vlenString.t
@@ -20,4 +21,3 @@ t/ztotal_index.t
 tkviewtest
 typemap
 varlen.hdf5
-xt/01-checkmanifest.t
