@@ -1,3 +1,5 @@
+- handle PDL 2.064+ types like signed byte (#5) - thanks @a-shahba for report
+
 0.75 2021-08-08
 - fix t/attribPDL.t to work on longdouble - thanks @eserte for report
 
